# carla_testbed

./: .env.example  .gitignore  AGENTS.md  README.md  carla_testbed_module_blueprint.md  pyproject.toml  requirements.txt  常用提示.txt
algo/: README.md  registry.py
algo/nodes/control/carla_control_bridge/: __init__.py  package.xml  ros2_autoware_to_carla.py  setup.py
carla_testbed/: README.md  __init__.py  cli.py  doctor.py
configs/: README.md  local.example.yaml  project.yaml  tools_boundary_allowlist.yaml
docs/: README.md  README_INDEX.md  actuator_regression_workflow.md  actuator_semantics_report.md  apollo10_gt_sim.md  apollo_algorithm_inventory.md  apollo_carla_semantic_and_calibration_workflow.md  apollo_control_handoff.md  apollo_current_module_logic.md  apollo_gt_localization_contract.md  apollo_link_alignment_matrix.md  apollo_mvp_bridge.md  apollo_reference_chain.md  apollo_reproduction.md  apollo_town01_hdmap_alignment.md  apollo_town01_truth_natural_driving.md  architecture.md  autoware_recording.md  backends.md  calibration_pipeline.md  carla_direct_ab.md  configuration.md  dual_machine_workflow.md  gt_followstop_apollo_baseline.md  gt_profile_matrix.md  gt_reference_line_rootcause.md  gt_truth_simulation_pipeline.md  legacy.md  localization_reference_point.md  migration_followstop_playbook.md  phase1_engineering_brief.md  platform_run_plan.md  project_showcase.md  run_artifacts.md  scenario_player.md  scenario_validation.md  testing.md  tools_boundary.md  town01_route_health.md  traffic_flow.md  (+1 more)
dumps/: bvar.python.data  bvar.python.latency.data  bvar.python.system.data
examples/: README.md  __init__.py  run_follow_stop_baseline.py  run_followstop.py  run_smoke.py
io/: README.md
scripts/: check_local_config.py  diagnose_lateral_control.py  diagnose_planning_empty.py  setup_dev_env.sh  speed_test_runner.py
tbio/: README.md
tests/: conftest.py  test_ab_manifest.py  test_ab_report.py  test_algorithm_variant_manifest.py  test_apollo_adapter_bridge_config.py  test_apollo_algorithm_inventory.py  test_apollo_bridge_claim_profile_routing.py  test_apollo_bridge_control_apply_trace.py  test_apollo_bridge_localization_message.py  test_apollo_carla_actuator_tracking.py  test_apollo_chain_completion.py  test_apollo_channel_contract.py  test_apollo_channel_health.py  test_apollo_chassis_gt_contract.py  test_apollo_control_handoff.py  test_apollo_control_mapping.py  test_apollo_control_runtime_diff.py  test_apollo_control_runtime_provenance.py  test_apollo_control_runtime_smoke.py  test_apollo_cyber_gt_bridge_facade.py  test_apollo_fixed_scene_launch_plan.py  test_apollo_frame_transform.py  (+185 more)
(+1120 files in other folders)
