[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carla-testbed"
version = "0.1.0"
description = "CARLA-based testbed with Autoware/dummy stacks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML",
    "numpy",
    "opencv-python",
    "networkx",
    "shapely",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pre-commit"]

[tool.setuptools.packages.find]
where = ["."]
include = ["carla_testbed*", "tbio*", "algo*"]
namespaces = true

[tool.pytest.ini_options]
addopts = [
    "-p", "no:ament_copyright",
    "-p", "no:ament_flake8",
    "-p", "no:ament_lint",
    "-p", "no:ament_pep257",
    "-p", "no:ament_xmllint",
    "-p", "no:launch_ros",
    "-p", "no:launch_testing",
    "-p", "no:launch_testing_ros",
]
markers = [
    "unit: fast tests that do not require live CARLA/Apollo services",
    "carla: requires a live CARLA simulator or CARLA Python wheel",
    "apollo: requires Apollo/CyberRT runtime",
    "autoware: requires Autoware/ROS2 runtime",
    "integration: requires external simulator/runtime services",
    "smoke: lightweight executable smoke checks",
    "local: local-machine checks that are not expected to run in CI",
]
testpaths = ["tests", "tools/test_first_wave_structure.py"]

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = [
    "artifacts",
    "runs",
    "reference_pack*/reference/06_open_source_and_official_refs/open_source_repos/local_repos",
]

[tool.ruff.lint]
select = ["E", "F"]
