<?xml version="1.0"?>
<package format="3">
  <name>carla_control_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 Ackermann to CARLA control bridge</description>
  <maintainer email="you@example.com">carla_testbed</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>builtin_interfaces</depend>
</package>
